site/stylesheets/layout.css
h1, h2, h3 {
    font-family: 'Oswald', sans-serif;
}

h1 {
    color: #fff;
    font-size: 120px;
    font-weight: 700;
    text-transform: uppercase;
    position: relative;
    z-index: 150;
    margin-bottom: 50px;
    text-shadow: 0px 5px 10px #000000;
}

h1.small {
    font-size: 52px;
    line-height: 66px;
    margin-bottom: 24px;
}

h2 {
    font-size: 60px;
    font-weight: 700;
    color: #434343;
    text-transform: uppercase;
    text-align: center;
    margin-top: 40px;
    margin-bottom: 60px;
}

h2.white {
    color: #fff;
}

span.lines {
    border-top: 1px solid #aeaeae;
    border-bottom: 1px solid #aeaeae;
}

h3 {
    font-size: 30px;
    text-transform: uppercase;
    font-weight: 600;
    color: #434343;
    text-align: center;
    margin: 30px 0 20px;
}

h3.white {
    color: #fff;
}

h4 {
    font-family: 'Source Sans Pro', sans-serif;
    font-size: 36px;
    font-weight: 600;
    color: #fff;
    text-transform: uppercase;
}

h5 {
    font-family: 'Source Sans Pro', sans-serif;
    font-size: 24px;
    font-weight: 600;
    text-transform: uppercase;
    color: #fff;
}

p {
    font-family: 'Source Sans Pro', sans-serif;
    font-size: 16px;
    font-weight: 400;
    line-height: 23px;
    color: #3d3d3d;
}

.white, .white p {
    color: #f9f9f9;
}
.white a, .white a:visited { color: #ddd; }
.white a:hover, .white a:focus { color: #fff; }

.sponsors {
    text-align: center;
}

@media only screen and (min-width: 767px) {
    .sponsors .one.column { width: 60px; }
    .sponsors .two.columns { width: 120px; }
}

.button1,input[type="submit"],input[type="reset"],input[type="button"] {
    background: #3a3a3a;
    border: 0;
    color: #fff;
    display: inline-block;
    font-size: 15px;
    font-weight: 400;
    text-transform: uppercase;
    text-decoration: none;
    cursor: pointer;
    margin-bottom: 20px;
    line-height: normal;
    padding: 6px 10px;
    font-family: 'Source Sans Pro', sans-serif;
}

.button1:hover,input[type="submit"]:hover,input[type="reset"]:hover,input[type="button"]:hover {
    color: #3a3a3a;
    background: #e8e8e8;
    border: 0;
}

.button1:active,button1:active,input[type="submit"]:active,input[type="reset"]:active,input[type="button"]:active {
    color: #3a3a3a;
    background: #e8e8e8;
    border: 0;
}

.button2 {
    background: #e8e8e8;
    border: 0;
    color: #3a3a3a;
    display: inline-block;
    font-size: 15px;
    font-weight: 400;
    text-transform: uppercase;
    text-decoration: none;
    cursor: pointer;
    line-height: normal;
    padding: 6px 10px;
    font-family: 'Source Sans Pro', sans-serif;
}

.button2:hover {
    color: #e8e8e8;
    background: #3a3a3a;
    border: 0;
}

.button1::-moz-focus-inner,input::-moz-focus-inner {
    border: 0;
    padding: 0;
}

.action {
    margin-top: 30px;
    padding: 30px 0;
    text-align: center;
    border-top: 1px solid #d3d3d3;
}

.action p {
    font-size: 22px;
    font-weight: 600;
    color: #515151;
}

.action p.white {
    color: #ececec;
}

.hidden {
    display: none;
}

p.separator {
    font-size: 30px;
    font-weight: 600;
    font-style: italic;
    color: #fff;
    line-height: 38px;
    text-transform: uppercase;
    position: relative;
    z-index: 200;
    text-align: center;
    padding-top: 240px;
}

.bg1, .bg2, .bg3, .bg4 {
    width: 100%; height: 100%;
    background-attachment: fixed;
    background-position: 50% 50%;
    background-repeat: no-repeat;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
}

#separator1 {
    width: 100%;
    height: 500px;
    position: relative;
}

#separator1 .bg2 {
    background-image: url(../images/bg2.jpg);
    margin: 0 auto;
    padding: 0;
    position: absolute;
    z-index: 200;
    height: 500px;
}

#separator2 {
    width: 100%;
    height: 500px;
    position: relative;
}

#separator2 .bg3 {
    background-image: url(../images/bg3.jpg);
    margin: 0 auto;
    padding: 0;
    position: absolute;
    z-index: 200;
    height: 500px;
}

#separator3 {
    width: 100%;
    height: 500px;
    position: relative;
}

#separator3 .bg4 {
    background-image: url(../images/bg4.jpg);
    margin: 0 auto;
    padding: 0;
    position: absolute;
    z-index: 200;
    height: 500px;
}

nav {
    background: #fff;
    width: 100%;
    position: relative;
    z-index: 1000;
    text-align: center;
    height: 38px;
    -webkit-box-shadow: 0px 3px 3px 0px rgba(0, 0, 0, 0.3);
    box-shadow: 0px 3px 3px 0px rgba(0, 0, 0, 0.3);
}

nav ul {
    padding-top: 10px;
}

nav ul li {
    display: inline;
    border-right: 1px solid #e6e6e6;
    padding: 11px 26px 8px 26px;
    margin: 0;
}

nav ul li:first-child {
    border-left: 1px solid #e6e6e6;
}

nav a {
    font-family: 'Source Sans Pro', sans-serif;
    font-size: 16px;
    color: #515151;
    font-weight: 300;
    text-decoration: none;
    text-transform: uppercase;
}

nav a:visited {
    color: #515151;
}

nav a:hover {
    color: #000;
}

#intro {
    width: 100%;
    height: 550px;
    text-align: center;
    z-index: 100;
}

#intro .bg1 {
    background-image: url(../images/bg1.jpg);
    margin: 0 auto;
    padding: 0;
    position: absolute;
    z-index: 100;
}

.title {
    position: fixed;
    width: 100%;
    text-align: center;
    z-index: 150;
    padding-top: 70px;
}

.intro-line {
    position: relative;
    z-index: 150;
    border-top: 3px solid #ededed;
    width: 670px;
    margin: 0 auto 45px auto;
    box-shadow: 0px 3px 3px #000000;
}

.title p {
    font-size: 24px;
    line-height: 30px;
    color: #fff;
    position: relative;
    z-index: 150;
}

.social-intro {
    margin-top: 40px;
    position: relative;
    z-index: 150;
}

.social-intro ul li {
    display: inline;
}

.social-intro a {
    display: inline-block;
    width: 220px; height: 40px;
    padding-left: 20px;
    margin: 0 10px 10px 10px;

    font-size: 20px;
    line-height: 39px;
    text-align: center;
    text-decoration: none;
    color: #fff;

    border-radius: 6px;
    opacity: 0.9;
    box-shadow: 0px 3px 3px #000000;
}

.social-intro a:hover {
    opacity: 1;
    border: 1px solid #ccc;
}

a.social-twitter {
    background: #7ad2f4 url('../images/icn-twitter-intro.png') no-repeat 5px center;
    border: 1px solid #7ad2f4;
}

a.social-facebook {
    background: #39599f url('../images/icn-facebook-intro.png') no-repeat 5px center;
    border: 1px solid #39599f;
}


#home {
    background: #fff;
    position: relative;
    z-index: 300;
    padding-top: 20px;
    padding-bottom: 40px;
    -webkit-box-shadow: 0px 0px 16px 0px rgba(0, 0, 0, 0.9);
    box-shadow: 0px 0px 16px 0px rgba(0, 0, 0, 0.9);
}

.flexslider {
    margin-top: 40px;
}

p.mid-text {
    margin-top: 40px;
}

.portfolio {
    text-align: center;
    margin-top: 40px;
}

p.proj-title {
    margin-bottom: 5px;
    padding-bottom: 2px;
    border-bottom: 1px solid #d3d3d3;
    text-transform: uppercase;
}

p.proj-desc {
    margin-bottom: 35px;
    padding-bottom: 2px;
    border-bottom: 1px solid #d3d3d3;
}

#wedstrijd {
    background: url(../images/bg-dark.jpg) repeat;
    position: relative;
    z-index: 300;
    padding-top: 40px;
    padding-bottom: 40px;
    -webkit-box-shadow: 0px 0px 16px 0px rgba(0, 0, 0, 0.9);
    box-shadow: 0px 0px 16px 0px rgba(0, 0, 0, 0.9);
}

#animatie {
    background: #fff;
    position: relative;
    z-index: 300;
    padding-top: 40px;
    padding-bottom: 40px;
    -webkit-box-shadow: 0px 0px 16px 0px rgba(0, 0, 0, 0.9);
    box-shadow: 0px 0px 16px 0px rgba(0, 0, 0, 0.9);
}

#contact {
    background: url(../images/bg-dark.jpg) repeat;
    position: relative;
    z-index: 300;
    padding-top: 20px;
    -webkit-box-shadow: 0px 0px 16px 0px rgba(0, 0, 0, 0.9);
    box-shadow: 0px 0px 16px 0px rgba(0, 0, 0, 0.9);
}

.done {
    font-family: 'Source Sans Pro', sans-serif;
    color: #fff;
    font-size: 14px;
    margin-bottom: 15px;
    padding: 10px;
    display: none;
}

.contact-form {
    position: relative;
    z-index: 300;
    margin-top: 20px;
}

.contact-form p {
    font-family: 'Source Sans Pro', sans-serif;
    font-size: 14px;
    color: #fff;
    text-transform: uppercase;
    margin-bottom: 2px;
}

.contact-form input {
    background: url(../images/cont-form-bg.jpg) repeat;
    width: 98%;
    height: 28px;
    margin-bottom: 10px;
    padding-left: 4px;
    font-family: 'Source Sans Pro', sans-serif;
    font-weight: 400;
    font-size: 16px;
    color: #fff;
    border: 0;
}

.contact-form textarea {
    background: url(../images/cont-form-bg.jpg) repeat;
    margin-bottom: 10px;
    padding-left: 5px;
    font-family: 'Source Sans Pro', sans-serif;
    font-weight: 400;
    font-size: 16px;
    color: #fff;
    width: 98%;
    height: 125px;
    border: 0;
}

.contact-form input.submit-button {
    background: #e8e8e8;
    border: 0;
    color: #3a3a3a;
    display: inline-block;
    font-size: 14px;
    font-weight: 400;
    text-transform: uppercase;
    text-decoration: none;
    cursor: pointer;
    margin-bottom: 20px;
    line-height: 0;
    padding: 3px 4px 0 4px;
    font-family: 'Source Sans Pro', sans-serif;
    width: 100px;
    height: 24px;
}

.contact-form input.submit-button:hover {
    color: #e8e8e8;
    background: #3a3a3a;
    border: 0;
}

.contact-info {
    margin-top: 20px;
}

.contact-info h5 {
    margin-bottom: 10px;
}

.contact-info img {
    vertical-align: middle;
    margin-right: 10px;
}

.social {
    padding-top: 15px;
}

.social ul li {
    display: inline;
    margin-right: 5px;
}

.social img:hover {
    opacity: 0.7;
}

.copyright {
    border-top: 1px solid #858585;
    text-align: center;
    margin-top: 30px;
    padding-top: 30px;
}

.copyright p {
    color: #858585;
    font-size: 14px;
}

.copyright a, .copyright a:visited { color: #999; }
.copyright a:hover, .copyright a:focus { color: #ccc; }

nav select {
    display: none;
}

@media (max-width: 960px) {

}

@media only screen and (max-width: 1024px) {
    .title {
        position: relative;
    }

    #intro {
        height: 500px;
    }

    .title {
        padding-top: 20px;
    }

    h1 {
        font-size: 100px;
        margin-bottom: 60px;
    }
}

@media only screen and (min-width: 480px) and (max-width: 767px) {
    h1 {
        font-size: 70px;
        margin-bottom: 20px;
    }

    #intro {
        height: 380px;
    }

    h1.small {
        font-size: 40px;
        line-height: 50px;
        margin-bottom: 20px;
    }

    .intro-line {
        width: 450px;
        margin-bottom: 18px
    }

    .title p {
        font-size: 20px;
        line-height: 28px;
    }

    nav ul li {
        padding-left: 15px;
        padding-right: 15px;
    }
}

@media only screen and (max-width: 479px) {
    #intro {
        height: 250px;
    }

    .title {
        position: relative;
        padding-top: 30px;
    }

    .intro-line {
        display: none;
    }

    h1 {
        font-size: 60px;
        margin-bottom: 20px;
    }

    h1.small {
        font-size: 24px;
        line-height: 28px;
        margin-bottom: 10px;
    }

    .title p {
        font-size: 18px;
        line-height: 28px;
    }

    nav ul {
        display: none;
    }

    nav select {
        display: inline-block;
        position: relative;
        margin-top: 8px;
        color: #000;
    }

    .social-intro {
        margin-top: 15px;
    }

    .social-intro a {
        width: 180px; height: 26px;
        font-size: 14px;
        line-height: 25px;
        opacity: 1;
    }
}

